SAS-829 fixed alignment of loading bubbles inside text area

--- a/theme-cache/web/theme.compiled.css
+++ b/theme-cache/web/theme.compiled.css
@@ -24670,26 +24670,32 @@ input[type=checkbox].three-state-checkbox + .control-label {
   line-clamp: 1;
 }
 
-.generating-loading-wrapper {
+.texbox-loading-wrapper {
+  position: relative;
+}
+.texbox-loading-wrapper .generating-loading-wrapper {
   display: flex;
   position: absolute;
-  left: 47%;
-  top: 58%;
+  height: 100%;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  top: 0;
 }
-.generating-loading-wrapper .loading-dot {
+.texbox-loading-wrapper .generating-loading-wrapper .loading-dot {
   border-radius: 100%;
   background-color: #845EFF;
   width: 4.6666666667px;
   height: 4.6666666667px;
 }
-.generating-loading-wrapper .loading-dot:nth-child(1) {
+.texbox-loading-wrapper .generating-loading-wrapper .loading-dot:nth-child(1) {
   animation: preloader 0.9s ease-in-out alternate infinite;
 }
-.generating-loading-wrapper .loading-dot:nth-child(2) {
+.texbox-loading-wrapper .generating-loading-wrapper .loading-dot:nth-child(2) {
   margin: 0 14px;
   animation: preloader 0.9s ease-in-out alternate 0.2s infinite;
 }
-.generating-loading-wrapper .loading-dot:nth-child(3) {
+.texbox-loading-wrapper .generating-loading-wrapper .loading-dot:nth-child(3) {
   animation: preloader 0.9s ease-in-out alternate 0.4s infinite;
 }
 @keyframes preloader {
