--- a/themesource/myfirstrfpassistant/web/main.scss
+++ b/themesource/myfirstrfpassistant/web/main.scss
@@ -590,36 +590,43 @@ $send-btn-size: $form-input-font-size * 2 !default;
     line-clamp: 1;
 }
 
-.generating-loading-wrapper {
-    display: flex;
-    position: absolute;
-    left: 47%;
-    top: 58%;
+.texbox-loading-wrapper {
+    position:relative;
 
-    .loading-dot {
-        border-radius: 100%;
-        background-color: $brand-purple-brighter;
-        width: $font-size-default / 3;
-        height: $font-size-default / 3;
+    .generating-loading-wrapper {
+        display: flex;
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        top: 0;
 
-        &:nth-child(1) {
-            animation: preloader 0.9s ease-in-out alternate infinite;
+        .loading-dot {
+            border-radius: 100%;
+            background-color: $brand-purple-brighter;
+            width: $font-size-default / 3;
+            height: $font-size-default / 3;
+
+            &:nth-child(1) {
+                animation: preloader 0.9s ease-in-out alternate infinite;
+            }
+
+            &:nth-child(2) {
+                margin: 0 14px;
+                animation: preloader 0.9s ease-in-out alternate 0.2s infinite;
+            }
+
+            &:nth-child(3) {
+                animation: preloader 0.9s ease-in-out alternate 0.4s infinite;
+            }
         }
 
-        &:nth-child(2) {
-            margin: 0 14px;
-            animation: preloader 0.9s ease-in-out alternate 0.2s infinite;
+        @keyframes preloader {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.5); }
+            100% { transform: scale(1); }
         }
-
-        &:nth-child(3) {
-            animation: preloader 0.9s ease-in-out alternate 0.4s infinite;
-        }
-    }
-
-    @keyframes preloader {
-        0% { transform: scale(1); }
-        50% { transform: scale(1.5); }
-        100% { transform: scale(1); }
     }
 }
 
